--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "probot-commands",
   "version": "1.0.1",
   "description": "A Probot extension that adds slash commands to GitHub",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "jest && standard"
   },
@@ -14,9 +14,11 @@
   "license": "ISC",
   "homepage": "https://github.com/probot/commands",
   "devDependencies": {
+    "@types/node": "^10.12.7",
     "jest": "^23.6.0",
-    "probot": "^6.2.0",
-    "standard": "^12.0.1"
+    "probot": "^7.0",
+    "standard": "^12.0.1",
+    "typescript": "^3.1.6"
   },
   "standard": {
     "env": [
