--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Probot extension that adds slash commands to GitHub",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest && standard"
+    "lint": "standard **/*.ts --fix",
+    "test": "jest && standard **/*.ts"
   },
   "repository": {
     "type": "git",
@@ -13,16 +14,34 @@
   "author": "Brandon Keepers <bkeepers@github.com>",
   "license": "ISC",
   "homepage": "https://github.com/probot/commands",
+  "dependencies": {
+    "probot": "^7.2.0"
+  },
   "devDependencies": {
-    "@types/node": "^10.12.7",
-    "jest": "^23.6.0",
-    "probot": "^7.0",
-    "standard": "^12.0.1",
-    "typescript": "^3.1.6"
+    "@types/jest": "^23.1.5",
+    "@types/node": "^10.5.2",
+    "eslint-plugin-typescript": "^0.12.0",
+    "jest": "^23.4.0",
+    "nodemon": "^1.17.2",
+    "smee-client": "^1.0.2",
+    "standard": "^10.0.3",
+    "ts-jest": "^23.0.0",
+    "typescript": "^2.9.2",
+    "typescript-eslint-parser": "^18.0.0"
+  },
+  "engines": {
+    "node": ">= 8.3.0"
   },
   "standard": {
+    "parser": "typescript-eslint-parser",
     "env": [
       "jest"
+    ],
+    "plugins": [
+      "typescript"
     ]
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
