--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "A Probot extension that adds slash commands to GitHub",
   "main": "index.js",
   "scripts": {
-    "test": "jest && standard"
+    "test": "jest"
   },
   "repository": "github:probot/commands",
   "author": "Brandon Keepers <bkeepers@github.com>",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^23.6.0",
-    "probot": "^6.2.0",
-    "standard": "^12.0.1"
-  },
-  "standard": {
-    "env": [
-      "jest"
-    ]
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.19",
+    "jest": "^26.6.3",
+    "probot": "^11.0.1",
+    "standard": "^12.0.1",
+    "ts-jest": "^26.5.5",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
